src/objects/PI_Risks__c.object
<CustomObject>
    <fields>
        <fullName>Accept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_Frequency__c</fullName>
        <label>Assessment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-annualy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annualy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Avoid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Avoid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_rank__c</fullName>
        <label>Current rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_loss__c</fullName>
        <label>Expected loss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>III__c</fullName>
        <formula>If(Includes (Relationship_to_Financial_Risk_MPL__c ,&quot;III&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>III</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>II__c</fullName>
        <formula>If(Includes (Relationship_to_Financial_Risk_MPL__c ,&quot;II&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>II</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IV__c</fullName>
        <formula>If(Includes (Relationship_to_Financial_Risk_MPL__c ,&quot;IV&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I__c</fullName>
        <formula>IF(INCLUDES( Relationship_to_Financial_Risk_MPL__c , &quot;I&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <inlineHelpText>H-High
M-Medium
L-Low</inlineHelpText>
        <label>Impact</label>
        <picklist>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impact_description__c</fullName>
        <label>Impact description</label>
        <length>100255</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact_number__c</fullName>
        <formula>case(text( Impact__c ), &quot;H&quot;,3,&quot;M&quot;,2,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impact number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact_voting_average__c</fullName>
        <inlineHelpText>5 - Catastrophic, over $10M 
4 - Major, $5M &lt; x &lt; $10M 
3 - Moderate, $2.5M &lt; x &lt; $5M 
2 - Minor, $1M &lt; x &lt; $2.5M 
1 - Insignificant, $1M or less</inlineHelpText>
        <label>Impact voting average</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_year_s_rank__c</fullName>
        <label>Last year&apos;s rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Likelihood_Voting_Average__c</fullName>
        <inlineHelpText>5 - Almost Certain, Once per year 
4 - Likely, Once every 2 years 
3 - Possible, Once every 5 years 
2 - Unlikely, Once every 10 years 
1 - Rare, Once every 20 years or more</inlineHelpText>
        <label>Likelihood voting average</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Likelihood__c</fullName>
        <inlineHelpText>H-High
M-Medium
L-Low</inlineHelpText>
        <label>Likelihood</label>
        <picklist>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Likelihood_number__c</fullName>
        <formula>case(text(  Likelihood__c  ), &quot;H&quot;,3,&quot;M&quot;,2,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Likelihood number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Rick Nauman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Kinard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mary-Lou Misrahy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rod Pierson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catherine Walberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alison Talbot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leslie Mallonee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eric Holm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Management Group</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Quarterly_Review_No_Changes__c</fullName>
        <formula>HYPERLINK(&apos;/apex/UpdateQuarterlyReviewStatus?id=&apos;&amp;Id+&apos;&amp;status=Reviewed but no changes&apos; , IMAGE(&apos;/servlet/servlet.FileDownload?file=015F0000004boJK&apos;,&apos;Reviewed but no changes&apos;),&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarterly review no changes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarterly_Review_Status__c</fullName>
        <label>Quarterly review status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarterly_Review_With_Changes__c</fullName>
        <formula>HYPERLINK(&apos;/apex/UpdateQuarterlyReviewStatus?id=&apos;&amp;Id+&apos;&amp;status=Reviewed with changes&apos; , IMAGE(&apos;/servlet/servlet.FileDownload?file=015F0000004boJJ&apos;,&apos;Reviewed with changes&apos;),&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarterly review with changes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reduce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reduce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Financial_Risk_MPL__c</fullName>
        <inlineHelpText>I. Price Adequacy
II. Market Pressures
III. Declining Investment Income and Inflation
Other Factors
IV. Effects of Continued Implementation of the ACA
V. Tort and Judicial Environment</inlineHelpText>
        <label>Relationship to financial risk (MPL)</label>
        <picklist>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Risk_Code__c</fullName>
        <formula>case( Likelihood_number__c * Impact_number__c ,9,5,6,4,2,2,1,1,3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>5	The most serious and imminent risk						
4	A serious risk							
3	A moderately serious risk with a moderate possibility of occurring						
2	Less than serious risk that appears unlikely to occur any time soon						
1	Minimal risk</inlineHelpText>
        <label>Risk Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Level__c</fullName>
        <formula>case( Risk_Code__c ,1,&quot;Minimal serious&quot;, 2, &quot;Less serious&quot;, 3, &quot;Moderately serious&quot;,4, &quot;Serious&quot;, &quot;Most serious&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Orientation__c</fullName>
        <label>Risk Orientation</label>
        <picklist>
            <picklistValues>
                <fullName>Enterprise wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Response__c</fullName>
        <label>Risk Response</label>
        <picklist>
            <picklistValues>
                <fullName>Avoid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Share</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Risk_Statement__c</fullName>
        <label>Risk statement</label>
        <length>100255</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Tolerance__c</fullName>
        <label>Risk tolerance</label>
        <length>100255</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_type__c</fullName>
        <label>Risk type</label>
        <picklist>
            <picklistValues>
                <fullName>Key risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watch list</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Share__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Share</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tail_exposure__c</fullName>
        <label>Tail exposure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trend__c</fullName>
        <inlineHelpText>Select from Grow, Decline, or Same</inlineHelpText>
        <label>Trend</label>
        <picklist>
            <picklistValues>
                <fullName>Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trend_indicator__c</fullName>
        <formula>IMAGE(CASE( TEXT( Trend__c ) , 
&apos;Grow&apos;,&quot;/servlet/servlet.FileDownload?file=015M0000000uAE1&quot;, 
&apos;Same&apos;,&quot;/servlet/servlet.FileDownload?file=015M0000000uAEB&quot;, 
&apos;Decline&apos;,&quot;/servlet/servlet.FileDownload?file=015M0000000uAE6&quot;, 

&quot;/s.gif&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trend indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V__c</fullName>
        <formula>If(Includes (Relationship_to_Financial_Risk_MPL__c ,&quot;V&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>V</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PI_Risk</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Risk_Statement__c</columns>
        <columns>Risk_type__c</columns>
        <columns>Current_rank__c</columns>
        <columns>Last_year_s_rank__c</columns>
        <columns>Risk_Code__c</columns>
        <columns>Trend_indicator__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Risk name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <recordTypes>
        <fullName>Physicians_Insurance_Risk_Assessment</fullName>
        <active>true</active>
        <label>Physicians Insurance Risk Assessment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>